crates/pg_syntax/tests/snapshots/postgres_regress/int8@96.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '-9223372036854775800'::int8 - '100'::int2;"
---
SelectStmt@0..50
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..49
    AExpr@7..49
      TypeCast@7..35
        AConst@7..29
          Sconst@7..29 "'-9223372036854775800'"
        Typecast@29..31 "::"
        TypeName@31..35
          Ident@31..35 "int8"
      Whitespace@35..36 " "
      Ascii45@36..37 "-"
      Whitespace@37..38 " "
      TypeCast@38..49
        AConst@38..43
          Sconst@38..43 "'100'"
        Typecast@43..45 "::"
        TypeName@45..49
          Ident@45..49 "int2"
  Ascii59@49..50 ";"

