crates/pg_syntax/tests/snapshots/postgres_regress/int8@98.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '-9223372036854775808'::int8 / '0'::int2;"
---
SelectStmt@0..48
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..47
    AExpr@7..47
      TypeCast@7..35
        AConst@7..29
          Sconst@7..29 "'-9223372036854775808'"
        Typecast@29..31 "::"
        TypeName@31..35
          Ident@31..35 "int8"
      Whitespace@35..36 " "
      Ascii47@36..37 "/"
      Whitespace@37..38 " "
      TypeCast@38..47
        AConst@38..41
          Sconst@38..41 "'0'"
        Typecast@41..43 "::"
        TypeName@43..47
          Ident@43..47 "int2"
  Ascii59@47..48 ";"

