crates/pg_syntax/tests/snapshots/postgres_regress/join@101.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select * from x;
---
SelectStmt@0..16
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeVar@14..15
    Ident@14..15 "x"
  Ascii59@15..16 ";"

